@startuml
skinparam classAttributeIconSize 0
hide circle
skinparam classAttributeIconSize 0

class Event {
    - eventName: String
    - eventDescription: String
    + hasExpense(expense : Expense) : boolean
    + addExpense(expense : Expense) : void
    + removeExpense(expense : Expense) : void
    + listExpenses() : String
}

class EventManager {
    + addEvent(event : Event) : void
    + getEvent(idx : int) : Event
    + removeEvent(idx : int) : void
    + getEventsPrintString() : String
}

class ExpenseManager {
}

class Expense {
    + getOwningEvent() : Event
    + setOwningEvent(event : Event) : void
    + removeOwningEvent() : void
}

class EventExpenseManager {
    + {static} buildConnection(expense : Expense, event : Event) : void
    + {static} removeConnectionFromOwningEvent (expense : Expense) : void
    + getConnectionsStringRepresentation() : String
    + loadConnection(stringRepresentation : String) : void
}

Expense "*" <---> "owningEvent 1" Event
EventManager "1" ---> "*"Event
ExpenseManager "1" --> "*"Expense

EventExpenseManager "1" --> "1"EventManager
EventExpenseManager "1"-> "1"ExpenseManager

@enduml
